--- a/views/users/forget.ejs
+++ b/views/users/forget.ejs
@@ -18,7 +18,7 @@ if (typeof message !== 'undefined') { %>
 
     <div class="container">
         <div class="col-md-12">
-            <form action="/user/login" method="get">
+            <form action="/user/login" method="post">
                 <title>Email</title>
                 <input type="email" name="email" placeholder="Enter Email">
                 <br>
